--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,6 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap");
 
+:root {
+  --textRegular: 400;
+  --textCold: 600;
+}
+
 body {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: var(--textRegular);
 }
